--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Nuevo.cshtml
@@ -143,7 +143,15 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha" })
+                        @Html.DevExpress().DateEditFor(q=> q.fecha, settings =>
+                    {
+                        settings.Name = "fecha";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -199,16 +207,6 @@
     }
 }
 <script>
-
-
-            $(function () {
-                //Date picker
-                $('#fecha').datepicker({
-                    autoclose: true
-                })
-
-            });
-
             function armar_diario() {
 
                 var datos = {
