--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionComisiones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionComisiones/Nuevo.cshtml
@@ -29,7 +29,15 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.Fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Fecha" })
+                        @Html.DevExpress().DateEditFor(q=> q.Fecha, settings =>
+                    {
+                        settings.Name = "Fecha";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -58,12 +66,4 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
-<script>
-    $(function () {
-        //Date picker
-        $('#Fecha').datepicker({
-            autoclose: true
-        })
 
-    });
-</script>
