--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/CodigoSRI/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/CodigoSRI/Modificar.cshtml
@@ -122,7 +122,15 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.co_f_valides_desde, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "co_f_valides_desde" })
+                        @Html.DevExpress().DateEditFor(q=> q.co_f_valides_desde, settings =>
+                    {
+                        settings.Name = "co_f_valides_desde";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.co_f_valides_desde, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -135,7 +143,15 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.co_f_valides_hasta, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "co_f_valides_hasta" })
+                        @Html.DevExpress().DateEditFor(q=> q.co_f_valides_hasta, settings =>
+                    {
+                        settings.Name = "co_f_valides_hasta";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.co_f_valides_hasta, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -151,16 +167,3 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
-<script>
-    $(function () {
-
-        //Date picker
-        $('#co_f_valides_desde').datepicker({
-            autoclose: true
-        })
-
-        $('#co_f_valides_hasta').datepicker({
-            autoclose: true
-        })
-    })
-</script>
