--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
@@ -70,7 +70,16 @@
                     <div class="input-group-addon">
                         <i class="fa fa-calendar"></i>
                     </div>
-                    @Html.TextBoxFor(q => q.co_FechaFactura, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "co_FechaFactura" })
+                   @Html.DevExpress().DateEditFor(q => q.co_FechaFactura, settings =>
+                   {
+                       settings.Name = "co_FechaFactura";
+                       settings.Properties.UseMaskBehavior = true;
+                       settings.Properties.EditFormat = EditFormat.Date;
+                       settings.Properties.EditFormatString = "dd/MM/yyyy";
+                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                       settings.Properties.ClientSideEvents.DateChanged = "function(s,e){co_FechaContabilizacion.SetValue(s.GetValue());}";
+                   }).GetHtml()
                     @Html.ValidationMessageFor(q => q.co_FechaFactura, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -82,7 +91,15 @@
                     <div class="input-group-addon">
                         <i class="fa fa-calendar"></i>
                     </div>
-                    @Html.TextBoxFor(q => q.co_FechaContabilizacion, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "co_FechaContabilizacion" })
+                   @Html.DevExpress().DateEditFor(q => q.co_FechaContabilizacion, settings =>
+                   {
+                       settings.Name = "co_FechaContabilizacion";
+                       settings.Properties.UseMaskBehavior = true;
+                       settings.Properties.EditFormat = EditFormat.Date;
+                       settings.Properties.EditFormatString = "dd/MM/yyyy";
+                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                   }).GetHtml()
                     @Html.ValidationMessageFor(q => q.co_FechaContabilizacion, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -101,7 +118,15 @@
                     <div class="input-group-addon">
                         <i class="fa fa-calendar"></i>
                     </div>
-                    @Html.TextBoxFor(q => q.co_FechaFactura_vct, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "co_FechaFactura_vct" })
+                    @Html.DevExpress().DateEditFor(q => q.co_FechaFactura_vct, settings =>
+                   {
+                       settings.Name = "co_FechaFactura_vct";
+                       settings.Properties.UseMaskBehavior = true;
+                       settings.Properties.EditFormat = EditFormat.Date;
+                       settings.Properties.EditFormatString = "dd/MM/yyyy";
+                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                   }).GetHtml()
                     @Html.ValidationMessageFor(q => q.co_FechaFactura_vct, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -392,7 +417,16 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-calendar"></i>
                                     </div>
-                                    @Html.TextBoxFor(q => q.info_cuota.Fecha_inicio, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Fecha_inicio" })
+                                    @Html.DevExpress().DateEditFor(q => q.info_cuota.Fecha_inicio, settings =>
+                                       {
+                                           settings.Name = "Fecha_inicio";
+                                           settings.Properties.UseMaskBehavior = true;
+                                           settings.Properties.EditFormat = EditFormat.Date;
+                                           settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                           settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                           settings.Properties.ClientSideEvents.DateChanged = "function(s,e){get_cuotas();}";
+                                       }).GetHtml()
                                     @Html.ValidationMessageFor(q => q.info_cuota.Fecha_inicio, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -427,20 +461,6 @@
 
 
     $(function () {
-        //Date picker
-        $('#co_FechaFactura').datepicker({
-            autoclose: true
-        })
-        $('#co_FechaContabilizacion').datepicker({
-            autoclose: true
-        })
-        $('#Fecha_inicio').datepicker({
-            autoclose: true
-        })
-
-        $('#co_FechaFactura_vct').datepicker({
-            autoclose: true
-        })
 
         $("#IdSucursal").change(function () {
             cargar_bodega();
@@ -448,14 +468,6 @@
     });
 
 
-
-    // funciones calcular total
-    $("#co_FechaFactura").change(function ()
-    {
-        var d = new  Date($("#co_FechaFactura").val());
-        $('#co_FechaContabilizacion').datepicker("setDate", moment(d).format("DD/MM/YYYY"));
-
-    });
     $("#co_subtotal_iva").change(function () {
 
         actualizar_valores();
@@ -483,10 +495,10 @@
         }
     });
     $("#co_plazo").change(function () {
-        var plazo = $("#co_plazo").val();
+        var plazo = Number($("#co_plazo").val());
         if (plazo > 0) {
-            var date = moment($("#co_FechaFactura").val(), "DD-MM-YYYY").add(plazo, 'days');
-            $('#co_FechaFactura_vct').datepicker("setDate", moment(date).format("DD/MM/YYYY"));
+            var new_date = moment(co_FechaFactura.GetDate(), "DD-MM-YYYY").add(plazo, 'days');
+            co_FechaFactura_vct.SetDate(new Date(new_date));
         };
     });
 
@@ -533,10 +545,6 @@
 
 
     }
-    // funciones calcular cuotas
-    $("#Fecha_inicio").change(function () {
-        get_cuotas();
-    });
     $("#Num_cuotas").keyup(function () {
         get_cuotas();
     });
@@ -566,7 +574,7 @@
     function get_cuotas()
     {
 
-        var Fecha_i = $("#Fecha_inicio").val();
+        var Fecha_i = Fecha_inicio.GetDate();
         var Num_cuot = $("#Num_cuotas").val();
         var Dias_plaz = $("#Dias_plazo").val();
         var Total_a_pag = $("#Total_a_pagar").val();
@@ -685,8 +693,8 @@
                     }
                     else
                     {
-                        var date = moment($("#co_FechaFactura").val(), "DD-MM-YYYY").add(data.pr_plazo, 'days');
-                        $('#co_FechaFactura_vct').datepicker("setDate", moment(date).format("DD/MM/YYYY"));
+                        var date = moment(co_FechaFactura.GetValue(), "DD-MM-YYYY").add(data.pr_plazo, 'days');
+                        co_FechaFactura_vct.SetValue(new Date(moment(date).format("DD/MM/YYYY")));
                     }
 
 
