--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_CmbCliente_Guia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_CmbCliente_Guia.cshtml
@@ -20,7 +20,6 @@
 
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.GuiaRemisionController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Facturacion.Controllers.GuiaRemisionController().get_info_bajo_demanda)
-    .Bind(Model.IdCliente);
-
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.Facturacion.fa_guia_remision_Info) ? "" : (Model == 0 ? "" : Model));
 }
 @comboBox.GetHtml()
