--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_CmbCliente_NotaCrebitoFacturacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_CmbCliente_NotaCrebitoFacturacion.cshtml
@@ -13,6 +13,7 @@
         settings.Properties.TextFormatString = "[{0}] {1} - {2}";
         settings.Properties.ValueField = "IdEntidad";
         settings.Properties.ValueType = typeof(decimal);
+        settings.Properties.FilterMinLength = 3;
 
         settings.Properties.Columns.Add("IdEntidad", "ID", 5);
         settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
@@ -20,7 +21,6 @@
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_info_cliente();}";
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.NotaDeCreditoFacturacionController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Facturacion.Controllers.NotaDeCreditoFacturacionController().get_info_bajo_demanda)
-    .Bind(Model.IdCliente);
-
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.Facturacion.fa_notaCreDeb_Info) ? "" : (Model == 0 ? "" : Model));
 }
 @comboBox.GetHtml()
