--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_CmbCliente_Proforma.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_CmbCliente_Proforma.cshtml
@@ -17,6 +17,7 @@
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
         settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
         settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 70);
+        settings.Properties.FilterMinLength = 3;
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_info_cliente();}";
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.ProformaController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Facturacion.Controllers.ProformaController().get_info_bajo_demanda)
