--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ActaFiniquito/_GridViewPartial_liquidacion_empleado_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ActaFiniquito/_GridViewPartial_liquidacion_empleado_det.cshtml
@@ -61,7 +61,14 @@
             column.Width = Unit.Percentage(60);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
-        settings.Columns.Add("Valor","$ Valor").Width = Unit.Percentage(5);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Valor";
+            column.Caption = "$ Valor";
+            column.Width = Unit.Percentage(60);
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+        });
+
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Valor");
         settings.Settings.ShowFooter = true;
 
