--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/BaseImpuestoRenta/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/BaseImpuestoRenta/Modificar.cshtml
@@ -10,8 +10,8 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Modificar", "BaseImpuestoRenta", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q => q.IdBaseImpuestoRenta)
-    @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.AnioFiscal)
+    @Html.HiddenFor(q => q.Secuencia)
 
     <div class="row">
         <div class="col-md-12">
