--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/BaseImpuestoRenta/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/BaseImpuestoRenta/Nuevo.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_tabla_Impu_Renta_Info
 
 @{
-    ViewBag.Title = "Nueva división";
+    ViewBag.Title = "Nueva base impuesto renta";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
