--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
@@ -19,8 +19,11 @@
         })
         $('#Fecha_fin').datepicker({
             autoclose: true
+           
         })
-
+        $('#FechaOP').datepicker({
+            autoclose: true
+        })
         $("#Fecha_ini").change(function () {
             GetSaldoAnterior();
         });
@@ -460,15 +463,7 @@
                     <div class="col-md-offset-10 col-md-2">
                         <div class="form-group">
                             <label for="FechaOP">Fecha*</label>
-                            @Html.DevExpress().DateEditFor(q=> q.FechaOP, settings =>
-                        {
-                            settings.Name = "FechaOP";
-                            settings.Properties.UseMaskBehavior = true;
-                            settings.Properties.EditFormat = EditFormat.Date;
-                            settings.Properties.EditFormatString = "dd/MM/yyyy";
-                            settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                        }).GetHtml()
+                            @Html.TextBoxFor(q => q.FechaOP, "{0:dd/MM/yyyy}", new { @id = "FechaOP", @class = "form-control" })
                             @Html.ValidationMessageFor(q => q.FechaOP, "", new { @class = "text-danger" })
                         </div>
                     </div>
