--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/GastosImportacion/_CmbCuenta_Gasto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/GastosImportacion/_CmbCuenta_Gasto.cshtml
@@ -15,11 +15,12 @@
         settings.Properties.ValueType = typeof(string);
         settings.Properties.Columns.Add("IdCtaCble", "ID", 10);
         settings.Properties.Columns.Add("pc_Cuenta", "Cuenta", 90);
+        settings.Properties.FilterMinLength = 3;
+
     })
     .BindList(new Core.Erp.Web.Areas.Importacion.Controllers.GastosImportacionController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Importacion.Controllers.GastosImportacionController().get_info_bajo_demanda)
-
-
     .Bind(Model.IdCtaCble);
+    
 
 }
 @comboBox.GetHtml()
